--- a/stylesheets/prototype.scss
+++ b/stylesheets/prototype.scss
@@ -12,7 +12,7 @@
         content: 'PROTOTYPE';
         position: absolute;
         top: 2.3em;
-        left: 1.05em;
+        left: 0.05em;
         font-family: $monospace;
         letter-spacing: 0.255em;
         color: black;
